@@ -19,6 +19,7 @@ module Gem
   
   # Potentially raised when a specification is validated.
   class InvalidSpecificationException < Gem::Exception; end
+  class EndOfYAMLException < Gem::Exception; end
   
   ##
   # == Gem::Specification
@@ -345,6 +346,9 @@ module Gem
     #
     def Specification.from_yaml(input)
       spec = YAML.load(input)
+      if(spec.class == FalseClass) then
+        raise Gem::EndOfYAMLException
+      end
       unless Specification === spec
         raise Gem::Exception, "YAML data doesn't evaluate to gem specification"
       end
